[package]
name = "async-imgui-rs"
version = "0.1.0"
authors = ["J. Martin <jwm@hive05.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium="0.25"
imgui="0.2"
imgui-glium-renderer="0.2"
imgui-winit-support="0.2"
futures = "0.3"
async-std = "1.4"